# DPapprox

./: .gitignore  CMakeLists.txt  README.md  main.cpp  solver.cpp  solver.h
data/: trj.csv
docs/: approximations.md
docs/examples/data/: dtd.csv
docs/examples/src/: rck.cpp  rck_robust.cpp  simple.cpp  trj.cpp
examples/: CMakeLists.txt  dtd.cpp
examples/data/: lvf.csv  rck_robust.csv  sol_dtd.csv  sol_lvf.csv  sol_rck.csv  sol_rck_robust.csv  sol_simple.csv  sol_trj.csv  solx_rck_robust.csv  sos.csv
examples/src/: dtd.cpp  lvf.cpp  mat.cpp  matrix.cpp  mwe.cpp  rck.cpp  rck_robust.cpp  run_all.cpp  simple.cpp  sos.cpp  trj.cpp
examples/test/: test_dtd.cpp  test_lvf.cpp  test_mat.cpp  test_matrix.cpp  test_mwe.cpp  test_rck.cpp  test_rck_robust.cpp  test_simple.cpp  test_sos.cpp  test_trj.cpp
include/: DPapprox.h  config.h  io_utils.h  logger.h  vector_ops.h
src/: DPapprox.cpp  main.cpp  solver.cpp  solver.h
src/utils/: io_utils.cpp  io_utils.h  logger.cpp  vector_ops.cpp
test/: test_dtd.cpp  test_matrix.cpp  test_mwe.cpp  test_rck.cpp  test_rck_robust.cpp  test_simple.cpp  test_trj.cpp
